tests/suite/fail/generated/types/fail_logical_not_i32.ny
fn main() {
    let _ = !1 //~ ERROR type mismatch in `unary `!`` operation
}
